Feat: Agregar el endpoint eliminar
